--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "axios": "^0.18.0",
+    "nativescript-fonticon": "^1.1.1",
     "nativescript-geolocation": "^4.2.6",
     "nativescript-theme-core": "^1.0.4",
+    "nativescript-ui-sidedrawer": "^4.1.1",
     "nativescript-vue": "^1.3.1",
     "tns-core-modules": "~3.4.1"
   },
