--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,9 @@
     "nativescript-theme-core": "^1.0.4",
     "nativescript-vue": "^1.3.1",
     "tns-core-modules": "~3.4.1",
-    "nativescript-geolocation": "^4.2.6"
+    "nativescript-geolocation": "^4.2.6",
+    "nativescript-ui-sidedrawer": "^4.1.1",
+    "nativescript-fonticon": "^1.1.1"
   },
   "devDependencies": {
     "babel-traverse": "6.26.0",
