--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nativescript-theme-core": "^1.0.4",
     "nativescript-ui-sidedrawer": "^4.1.1",
     "nativescript-vue": "^1.3.1",
-    "tns-core-modules": "~3.4.1"
+    "tns-core-modules": "~3.4.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
